# crossover

./: CMakeLists.txt  README.md
src/: main.cpp
tex/: beamer.tex  circuito.tex  crossover.tex
